--- a/question1.html
+++ b/question1.html
@@ -4,9 +4,9 @@
     <title>Lab4 JS Question 1 SlideShow</title>
     
   </head>
-
+  <img id="slideshow" src="images/img1.jpg" width="300" height="200">
   <body>
     
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
   </body>
 </html>
