--- a/question1.html
+++ b/question1.html
@@ -4,9 +4,9 @@
     <title>Lab4 JS Question 1 SlideShow</title>
     
   </head>
-  <img id="slideshow" src="images/img1.jpg" width="300" height="200">
+  <img onmouseover="hover()" onmouseleave= "leave()"id="slideshow" src="images/img1.jpg" width="400" height="300">
   <body>
     
-    <script src="script1.js"></script>
+    <script src="question1.js"></script>
   </body>
 </html>
