--- a/question2.html
+++ b/question2.html
@@ -11,7 +11,7 @@
     }
     </style>
   <body>
-
+<h1>Please make sure you run from live server</h1>
     <select id="users" size="4" onClick="displayUser()">
       <option>Ahmed</option>
       <option>Mohamed</option>
